Fixed layout issue on Safari

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,7 +7,6 @@
 html, body {
 	margin: 0;
 	padding: 0;
-	height: 100%;
 }
 
 @import '../../node_modules/mozilla-tabzilla/css/tabzilla.css';
